# Gemini

./: .fdignore  2d.py  README.md  example.py  gemini_block.py  long_gemini_example.py  multi_modal_example.py  pyproject.toml  requirements.txt  tokenizer.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codacy.yml  docker-publish.yml  pr_request_checks.yml  pull-request-links.yml  python-package.yml  python-publish.yml
docs/: cache_db.json  cache_title.json  metadata.json  sitemap.xml  tree.html
docs/data/: 0.json  1.json  2.json
docs/data/titles/: 0.json
docs/doc/: 199d3481-ee8e-427a-96b0-5b6f39f030e7.json  1e301c20-64f8-4c6d-bffb-fa2ea80fe485.json  257aacba-3665-4f87-90f7-a2c912ff038b.json  39ed596a-3a92-48bc-86d4-502b057f624a.json  3e81818e-4b90-4df1-8662-10886c311a12.json  4919e47c-4dd9-448f-a2c5-04b5fb114673.json  5e329247-aa02-4837-8c41-50b5f49ce472.json  7f5024e8-9541-4428-893d-0c2f320041ca.json  81ac8fa7-1217-4a3a-9dfd-3de66acae75e.json  af5aa46e-4813-47e9-a7d2-c4e813701b0a.json  b58c4b2f-dc3b-454c-b80f-865fc3462a2d.json  e1af151f-1f7f-44b1-8d06-a09254b90d43.json  e9dbc9e0-3ab6-434c-a5ed-33cf44a22297.json  ffcefcf8-874d-416b-aa56-fb1accf9e25b.json
docs/src/: README.md  example.py  requirements.txt
gemini/: model.py
gemini_torch/: __init__.py  long_gemini.py  model.py  omni_modality_processor.py  tokenizer.py  transformer.py  utils.py
geminix/: model.py  transformer.py  utils.py
old/: 2d.py
tests/: img_to_transformer.py  test_audio_embedder.py  test_gemini.py  test_img_encoder.py  test_img_to_transformer.py
(+7 files in other folders)
